; ModuleID = '/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_node.c_node_setcpufreq.c'
source_filename = "/home/carl/AnghaBench/nodemcu-firmware/app/modules/extr_node.c_node_setcpufreq.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@CPU160MHZ = common dso_local global i64 0, align 8
@CPU80MHZ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*)* @node_setcpufreq to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @node_setcpufreq(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i64, align 8
  store i32* %0, i32** %2, align 8
  %4 = load i32*, i32** %2, align 8
  %5 = call i64 @luaL_checkinteger(i32* %4, i32 1)
  store i64 %5, i64* %3, align 8
  %6 = load i64, i64* %3, align 8
  %7 = load i64, i64* @CPU160MHZ, align 8
  %8 = icmp eq i64 %6, %7
  br i1 %8, label %9, label %14

9:                                                ; preds = %1
  %10 = call i32 @BIT(i32 0)
  %11 = call i32 @REG_SET_BIT(i32 1072693268, i32 %10)
  %12 = load i64, i64* @CPU160MHZ, align 8
  %13 = call i32 @ets_update_cpu_frequency(i64 %12)
  br label %19

14:                                               ; preds = %1
  %15 = call i32 @BIT(i32 0)
  %16 = call i32 @REG_CLR_BIT(i32 1072693268, i32 %15)
  %17 = load i64, i64* @CPU80MHZ, align 8
  %18 = call i32 @ets_update_cpu_frequency(i64 %17)
  br label %19

19:                                               ; preds = %14, %9
  %20 = call i64 (...) @ets_get_cpu_frequency()
  store i64 %20, i64* %3, align 8
  %21 = load i32*, i32** %2, align 8
  %22 = load i64, i64* %3, align 8
  %23 = call i32 @lua_pushinteger(i32* %21, i64 %22)
  ret i32 1
}

declare dso_local i64 @luaL_checkinteger(i32*, i32) #1

declare dso_local i32 @REG_SET_BIT(i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @ets_update_cpu_frequency(i64) #1

declare dso_local i32 @REG_CLR_BIT(i32, i32) #1

declare dso_local i64 @ets_get_cpu_frequency(...) #1

declare dso_local i32 @lua_pushinteger(i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
